Don't call parent() so often when processing a range.

Task-number: QTBUG-17732
Change-Id: Iefe5801f5941136f77001c532870e22f7fdd2c69
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>

cregit: ebf0ee34e7a50b8dbe9ed766a9737a8f77805449 https://github.com/qt/qtbase/commit/ebf0ee34e7a50b8dbe9ed766a9737a8f77805449